# defi

./: CMakeLists.txt  build.sh
onesgamedefi/: CMakeLists.txt  onesgamedefi.cpp  onesgamedefi.hpp
onesgamedivd/: CMakeLists.txt  onesgamedivd.cpp  onesgamedivd.hpp
onesgamemine/: CMakeLists.txt  onesgamemine.cpp  onesgamemine.hpp
scripts/: helper.sh
